# openeral

./: .actrc  .dockerignore  .gitignore  ARCHITECTURE.md  BUILD.md  CLAUDE.md  Cargo.toml  Dockerfile.cluster  Dockerfile.openeral  README.md  WORKSPACE_AND_CLAUDE_FIX.md  build-image.sh  gap-plan.md  openclaw-hang-diagnosis.md
.claude/: settings.local.json
.claude/skills/openeral-dev/: SKILL.md
.claude/skills/openeral-navigate/: SKILL.md
.claude/skills/openeral-shell/: SKILL.md
.github/scripts/: smoke_openshell.sh
.github/workflows/: ci.yml  publish-images.yml
crates/openeral-core/migrations/: V4__create_workspace_tables.sql  V5__create_optimization_tables.sql  V6__grant_supabase_visibility.sql
crates/openeral-core/src/: error.rs
crates/openeral-core/tests/: workspace_integration.rs
crates/openeral-csi/: Cargo.toml  build.rs
crates/openeral-csi/proto/: csi.proto  openshell_provider_env.proto
crates/openeral-csi/src/: main.rs
deploy/docker/: openeral-cluster-entrypoint.sh
deploy/kube/manifests/: openshell-openeral-csi.yaml
docs/: openviking-setup.md
openeral-js/: lint.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
openeral-js/.claude/: settings.local.json
openeral-js/src/: cli.test.ts  cli.ts  index.ts  proxy.test.ts  sync.test.ts  sync.ts
sandboxes/openeral/: Dockerfile  README.md  openeral-bash.mjs  openeral-claude.sh  pg-client.mjs  policy.yaml  setup.sh
scripts/: gateway-ensure-mnt.sh
tests/: test_fuse_mount.sh  test_live_secret_injection.sh  test_live_supabase_env.sh  test_sandbox_e2e.sh  test_setup_e2e.sh
(+44 files in other folders)
