[workspace]
members = [
    "crates/openeral",
    "crates/openeral-core",
    "crates/openeral-csi",
]
resolver = "2"

[workspace.lints.rust]
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"

[workspace.lints.clippy]
await_holding_lock = "deny"
too_many_arguments = { level = "allow", priority = 1 }
